--- a/ui/directive/topTab/topTab.html
+++ b/ui/directive/topTab/topTab.html
@@ -23,4 +23,6 @@
         <select-all minder="minder"></select-all>
         <search-btn minder="minder"></search-btn>
     </tab>
+      <div style="margin-top: 5px;cursor: pointer;" ng-click="save()">保存</div>
 </tabset>
+
