--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 			});
 
 	window.addEventListener('message',e=>{
+	    console.log(e.data)
 	    if(e.data.type!='mind'){
 	        return
         }
